Record shutdown ownership corrections and regression coverage